made some style changes to fix remaining bugs while screen-overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     text-align: right;  
     font-size: 54px;
     word-wrap: break-word;
+    min-height: 75px;
 }
 
 .button{
@@ -23,7 +24,7 @@
     margin: 125px auto;
     padding: 4px;
     width: 450px;
-    height: 500px;
+    height: auto;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
